# maltaekni-v3

./: README.md  pyproject.toml  tokenizer.py  tokenizer_regex.py  verkefni3.ipynb
tests/: test_tokenizer.py  test_tokenizer_regex.py
