[tool.poetry]
name = "v3"
version = "0.1.0"
description = ""
authors = ["Ólafur Sverrir Kjartansson <kjarni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
reynir = "^3.5.1"
spacy = "^3.4.1"
nltk = "^3.7"


[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
